BPA Invoice Details: tweak column headings again

--- a/app/views/predefined_reports/bpa_invoice_details.html.erb
+++ b/app/views/predefined_reports/bpa_invoice_details.html.erb
@@ -26,7 +26,7 @@
       <tr>
         <th class="number">Hours</th>
         <th class="number">Miles</th>
-        <th class="number">Amount</th>
+        <th class="number">Cost</th>
       </tr>
     </thead>
     <tbody>
