--- a/app/views/predefined_reports/bpa_invoice_details.html.erb
+++ b/app/views/predefined_reports/bpa_invoice_details.html.erb
@@ -15,7 +15,7 @@
         <th rowspan="2">Start Time</th>
         <th rowspan="2">End Time</th>
         <th colspan="3" class="column-group">Apportioned Amounts</th>
-        <th rowspan="2">Total Trips</th>
+        <th rowspan="2">Trips</th>
         <th rowspan="2">Share ID</th>
         <th rowspan="2">Project #</th>
         <th rowspan="2">F.E. Project Name</th>
