--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1419,3 +1419,7 @@ body.allocation-summary td {
   border: 1px solid gray;
   padding: 5px;
 }
+
+body.bpa-invoice table#trip-results td {
+  padding: 1px 5px;
+}
