Predefined allocation summary report tweak
Add ability to unselect all groups.

--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -235,6 +235,7 @@
       <div class="sortable" >
         <h3>
           Selected groups
+          <a href="#" id="unselect-all">Unselect All</a>
         </h3>
         <ul id="sortable-selected" class="connectedSortable">
           <% @selected_groupings.each do |this_grouping| %>
