--- a/app/views/predefined_reports/quarterly_narrative.html.erb
+++ b/app/views/predefined_reports/quarterly_narrative.html.erb
@@ -19,7 +19,7 @@
   <% end %>
   <h2>
     <%= reporting_agency %> &mdash; 
-    <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %> &mdash; All Programs
+    <%= report_month_range(@report.start_date, @report.after_end_date) %> &mdash; All Programs
   </h2>
   <%= render "flex_reports/report", 
       :results => @summary_report.results[reporting_agency], 
