Flex reports: add classes from report section
This fixes the problem with predefined reports, like the quarterly
narrative report, that run multiple reports on one page. Group collapse
and expand was broken in these cases.

Also, improved whitespace and added some comments.

--- a/app/views/flex_reports/_group_header.html.erb
+++ b/app/views/flex_reports/_group_header.html.erb
@@ -1,6 +1,8 @@
+<% section = 'section-main' if section.nil? %>
 <%= content_tag :tr, 
-  :class => (row_classes + %w(collapsible visible-group) + (root_header ? ['no-print'] : []) + ["level-#{tree_map.size}"]).join(' '), 
-  "data-group" => this_row_group_class do %>
+  :class => (row_classes + %w(collapsible visible-group) + (root_header ? ['no-print'] : []) + [section, "level-#{tree_map.size}"]).join(' '), 
+  "data-group" => this_row_group_class,
+  "data-section" => section do %>
   <% if root_header %>
     <%= content_tag :td, :class => "report-item toggleable", :colspan => (@report.fields.size + report_group_fields.size + 1) do %>
       All Data
