--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -1,5 +1,5 @@
 <% currency_precision = 0 if currency_precision.nil? %>
-<%= content_tag :tr, :class => (row_classes + ["data"] + ["level-#{tree_map.size}"]).join(' ') do %>
+<%= content_tag :tr, :class => (row_classes + [section, "data", "level-#{tree_map.size}"]).join(' ') do %>
   <% (report_group_fields.size).times do %>
     <td class="indent">&nbsp;</td>
   <% end %>
