--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1420,6 +1420,7 @@ body.allocation-summary td {
   padding: 5px;
 }
 
-body.bpa-invoice table#trip-results td {
+body.bpa-invoice  table#trip-results    td,
+body.trip-purpose table#purpose-results td {
   padding: 1px 5px;
 }
