--- a/app/views/predefined_reports/premium_service_billing.erb
+++ b/app/views/predefined_reports/premium_service_billing.erb
@@ -81,17 +81,35 @@
       <th class="number"><%= number_to_currency(@total_cost) %></th>
       <th></th>
     </tr>
+    <% @grouped_trips_billed_per_hour.keys.sort_by{|a| a.name }.each do |provider| %>
+      <tr>
+        <td><%= provider %> Hours</td>
+        <td class="number"><%= @grouped_trips_billed_per_hour[provider].keys.reduce(0){|s,r| s + r.ads_billable_hours} %></td>
+      </tr>
+    <% end %>
     <tr>
       <th class="text">Total Billable Hours</th>
       <th class="number"><%= @total_billable_hours %></th>
     </tr>
+    <% @grouped_taxi_trips.keys.sort_by{|a| a.name }.each do |provider| %>
+      <tr>
+        <td><%= provider %> Trips</td>
+        <td class="number"><%= @grouped_taxi_trips[provider].size %></td>
+      </tr>
+    <% end %>
     <tr>
-      <th class="text">Taxi Trips</th>
-      <th class="number"><%= @taxi_trip_count %></th>
+      <th class="text">Total Taxi Trips</th>
+      <th class="number"><%= @taxi_trips.size %></th>
     </tr>
+    <% @grouped_partner_trips.keys.sort_by{|a| a.name }.each do |provider| %>
+      <tr>
+        <td><%= provider %> Trips</td>
+        <td class="number"><%= @grouped_partner_trips[provider].size %></td>
+      </tr>
+    <% end %>
     <tr>
-      <th class="text">Partner Trips</th>
-      <th class="number"><%= @partner_trip_count %></th>
+      <th class="text">Total Partner Trips</th>
+      <th class="number"><%= @partner_trips.size %></th>
     </tr>
   </tbody>
 </table>
