--- a/app/views/predefined_reports/premium_service_billing.erb
+++ b/app/views/predefined_reports/premium_service_billing.erb
@@ -83,32 +83,32 @@
     </tr>
     <% @grouped_trips_billed_per_hour.keys.sort_by{|a| a.name }.each do |provider| %>
       <tr>
-        <td><%= provider %> Hours</td>
+        <td colspan="2"><%= provider %> Hours</td>
         <td class="number"><%= @grouped_trips_billed_per_hour[provider].keys.reduce(0){|s,r| s + r.ads_billable_hours} %></td>
       </tr>
     <% end %>
     <tr>
-      <th class="text">Total Billable Hours</th>
+      <th colspan="2" class="text">Total Billable Hours</th>
       <th class="number"><%= @total_billable_hours %></th>
     </tr>
     <% @grouped_taxi_trips.keys.sort_by{|a| a.name }.each do |provider| %>
       <tr>
-        <td><%= provider %> Trips</td>
+        <td colspan="2"><%= provider %> Trips</td>
         <td class="number"><%= @grouped_taxi_trips[provider].size %></td>
       </tr>
     <% end %>
     <tr>
-      <th class="text">Total Taxi Trips</th>
+      <th colspan="2" class="text">Total Taxi Trips</th>
       <th class="number"><%= @taxi_trips.size %></th>
     </tr>
     <% @grouped_partner_trips.keys.sort_by{|a| a.name }.each do |provider| %>
       <tr>
-        <td><%= provider %> Trips</td>
+        <td colspan="2"><%= provider %> Trips</td>
         <td class="number"><%= @grouped_partner_trips[provider].size %></td>
       </tr>
     <% end %>
     <tr>
-      <th class="text">Total Partner Trips</th>
+      <th colspan="2" class="text">Total Partner Trips</th>
       <th class="number"><%= @partner_trips.size %></th>
     </tr>
   </tbody>
