Add csv version of trip purpose report
Also improve some date formatting & whitespace

--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -100,6 +100,7 @@
         </li>
       </ol>
       <input type="submit" name="report" value="Report">
+      <input type="submit" name="output" value="CSV">
     </fieldset>
   <% end %>
 </div>
