Flex reports: added ability to fiddle with filters
from the flex report show page, users can now view and update the
filters of the report. Changes made to filters from this view are not
permanently saved to the report.

--- a/app/views/flex_reports/show.html.erb
+++ b/app/views/flex_reports/show.html.erb
@@ -26,6 +26,7 @@
 <%= form_for @report, :html => {:class => 'run-report', :method => :get, :style => "display:none;"} do |f| %>
   <fieldset class="no-print">
     <%= render 'grouping' %>
+    <%= render 'filters' %>
     <%= render 'columns' %>
     <%= render 'date_range', :f => f %>
     <div class="actions">
