--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -53,11 +53,6 @@
       </li>
       
       <li class="selfclear">
-        <%= form.label :eligibility, "Service Eligibility" %>
-        <%= form.select :eligibility, Allocation::ELIGIBILITIES, {:prompt => "<Select Option>"} %>
-      </li>
-
-      <li class="selfclear">
         <%= form.label :do_not_show_on_flex_reports, "Do not show on flex reports (unless specified individually)" %>
         <%= form.check_box :do_not_show_on_flex_reports %>
       </li>
@@ -99,6 +94,11 @@
       <li class="selfclear">
         <%= form.label :vehicle_maint_data, "Vehicle maintenance data" %>
         <%= form.select :vehicle_maint_data, Allocation::DATA_OPTIONS, {:prompt => "<Select Option>"} %>
+      </li>
+
+      <li class="selfclear">
+        <%= form.label :eligibility, "Service eligibility (for TriMet E&D report)" %>
+        <%= form.select :eligibility, Allocation::ELIGIBILITIES, {:prompt => "<Select Option>"} %>
       </li>
 
       <li class="selfclear">
