TriMet audit export: exclude vehicle maintenance
Also clean up the code a bit, making it easier to filter down the list
of allocations to use when developing a predefined report that uses the
flex report engine.

--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -9,7 +9,7 @@
       </li>
       <li>
         <h2>Reporting Attributes</h2>
-        These attributes are used for grouping and filtering report data.
+        These attributes are used for grouping and filtering report data
         <ol class="section">
           <li class="selfclear">
             <%= form.label :program %>
