--- a/app/views/summaries/adjustments.html.erb
+++ b/app/views/summaries/adjustments.html.erb
@@ -1,6 +1,42 @@
 <div id="page-header">
   <h1>Summary Adjustment History</h1>
 </div>
+<%= form_for @query, :as => :q, :html=>{:id=>"summary-filter", :method=>:get}, :url=>{:action=>:adjustments} do |f| %>
+  <fieldset>
+
+    <ol class="section first">
+      <li>
+        <label>Start Date:</label>
+        <%= f.date_select( :start_date, :start_year => 2012, :end_year => Date.today.year, :order => [:month, :year] ) %>
+      </li>
+      <li>
+        <label>End Date:</label>
+        <%= f.date_select( :end_date, :start_year => 2012, :end_year => Date.today.year, :order => [:month, :year] ) %>
+      </li>
+    </ol>
+
+    <ol class="section fourth">
+      <li>
+        <label>Reporting Agencies:</label>
+        <%= f.collection_select :reporting_agency, @query.reporting_agencies, :id, :to_s, :include_blank => true %>
+      </li>
+      <li>
+        <label>Providers:</label>
+        <%= f.collection_select :provider, @query.providers, :id, :to_s, :include_blank => true %>
+      </li>
+      <li>
+        <label>Adjustment notes contain:</label>
+        <%= f.text_field :adjustment_notes_contain %>
+      </li>
+    </ol>
+
+    <div class="actions">
+      <input id="summary-search" type="submit" value="Search" />
+    </div>
+
+  </fieldset>
+<% end %> 
+
 <div class="list-wrapper">
   <table id="summary-results">
     <thead>
