--- a/app/views/trips/list.html.erb
+++ b/app/views/trips/list.html.erb
@@ -2,7 +2,7 @@
   <h1>View Trips</h1>
 </div>
 
-<%= render 'search' if @query.display_search_form %>
+<%= render('search', :allow_csv => true, :action => :list) if @query.display_search_form %>
 
 <h2 id="result-count">
   <%= pluralize @trips.total_entries, "record" %> found.
