--- a/app/views/trips/adjustments.html.erb
+++ b/app/views/trips/adjustments.html.erb
@@ -1,7 +1,11 @@
 <div id="page-header">
   <h1>Trip Adjustment History</h1>
 </div>
+
+<%= render('search', :allow_csv => false, :action => :adjustments) %>
+
 <%= will_paginate @adjustments %>
+
 <table>
   <tr>
     <th>Change Date & Time</th>
