--- a/app/views/trips/show_import.html.erb
+++ b/app/views/trips/show_import.html.erb
@@ -36,7 +36,7 @@
     <th>Imported At</th>
     <th>File Name</th>
     <th>Notes</th>
-    <th>Trip Count</th>
+    <th>Records</th>
     <th></th>
   </tr>
   <% for trip_import in @trip_imports %>
