Replace 'CSV' with 'Data' in labels

--- a/app/views/flex_reports/_form.html.erb
+++ b/app/views/flex_reports/_form.html.erb
@@ -34,7 +34,7 @@
         <% action = @report.new_record? ? "Create" : "Update" %>
         <%= f.submit action %>
         <%= f.submit "#{action} and View", :name => "view" %>
-        <%= f.submit "#{action} and Export as CSV", :name => "csv" %>
+        <%= f.submit "#{action} and Export Data", :name => "csv" %>
       </div>
     <% end %>
 
