--- a/app/views/flex_reports/show.html.erb
+++ b/app/views/flex_reports/show.html.erb
@@ -31,7 +31,7 @@
     <%= render 'date_range', :f => f %>
     <div class="actions">
       <%= f.submit "Update View" %>
-      <%= f.submit "Export as CSV", :name => "csv" %>
+      <%= f.submit "Export Data", :name => "csv" %>
     </div>
   </fieldset>
 <% end %>
