--- a/app/views/trips/_search.html.erb
+++ b/app/views/trips/_search.html.erb
@@ -67,8 +67,8 @@
     <div class="actions">
       <%= f.submit "Search", :id => "trip-search" %>
       <% if allow_csv %>
-        <%= f.submit "Download All Fields as CSV" %>
-        <%= f.submit "Download BPA Invoice Data" %>
+        <%= f.submit "Export All Data Fields" %>
+        <%= f.submit "Export BPA Invoice Data" %>
       <% end %>
     </div>
 
