--- a/app/views/flex_reports/_run_form.html.erb
+++ b/app/views/flex_reports/_run_form.html.erb
@@ -15,6 +15,6 @@
       <%= f.submit "View Report" %>
     </li>
     <li>
-      <%= f.submit "Export as CSV", :name => "csv" %>
+      <%= f.submit "Export Data", :name => "csv" %>
     </li>
   </ol>
