Tweaks to flex report filter UI

--- a/app/views/flex_reports/_filter.html.erb
+++ b/app/views/flex_reports/_filter.html.erb
@@ -1,9 +1,14 @@
 <% grouped_options = false unless defined?(grouped_options) %>
+<% if grouped_options %>
+  <% items = [['<None>','']] + list_items.reduce([]){|result, item| result + item[1] } %>
+<% else %>
+  <% items = list_items %>
+<% end %>
 <li class="filter">
   <h3>
     <%= title %>
   </h3>
-  <select class="multi full" id="report_<%= name %>" multiple="multiple" name="flex_report[<%= name %>][]" style="display: none">
+  <select class="multi" id="report_<%= name %>" multiple="multiple" name="flex_report[<%= name %>][]" size="<%= (items.size > 20) ? 20 : items.size %>" style="display: none">
     <% if grouped_options %>
       <%= options_for_select([['<None>','']],(values.blank? ? [''] : [])) %> 
       <%= grouped_options_for_select list_items, values %>
@@ -12,13 +17,8 @@
     <% end %>
   </select>
   <ul class="filter-list">
-    <% if grouped_options %>
-      <% items = [['<None>','']] + list_items.reduce([]){|result, item| result + item[1] } %>
-    <% else %>
-      <% items = list_items %>
-    <% end %>
     <% items.each do |x| %>
-      <li data-value="<%= x[1] %>" style="display: <%= (values.include?(x[1]))? 'list-item' : 'none' %>">
+      <li class="<%= (x[1] == '') ? "blank" : "not-blank" %>" data-value="<%= x[1] %>" style="display: <%= (values.include?(x[1]))? 'list-item' : 'none' %>">
         <%= x[0] %>
       </li>
     <% end %>
